--- a/app/scss/components/_header-catalog.scss
+++ b/app/scss/components/_header-catalog.scss
@@ -69,6 +69,8 @@
     &--active {
       opacity: 1;
       z-index: 2;
+      height: 600px;
+      overflow-y: auto;
     }
   }
 
@@ -78,11 +80,12 @@
     line-height: 1.2;
     letter-spacing: 0.03em;
     color: #000000;
+    transition: color 0.5s,
+    border-left 0.5s;
 
     &:hover {
       color: $green-900;
       border-left: 3px solid $green-900;
-
     }
 
     &:not(:last-child) {
